crates/views/re_view_spatial/tests/integration/snapshots/integration__spawn_heuristics__2d_and_3d_view_nothing_excluded.snap
---
source: crates/views/re_view_spatial/tests/integration/spawn_heuristics.rs
expression: recommended_views
---
RecommendedViews {
    views_2d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /image1,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
            ],
        },
    ),
    views_3d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
            ],
        },
    ),
}
