crates/views/re_view_spatial/tests/integration/snapshots/integration__spawn_heuristics__detect_and_track_objects_like_scene_2d_view_heuristic.snap
---
source: crates/views/re_view_spatial/tests/integration/spawn_heuristics.rs
expression: recommended_views
---
RecommendedViews {
    views_2d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /segmentation,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
                RecommendedView {
                    origin: /video,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
            ],
        },
    ),
    views_3d: Some(
        ViewSpawnHeuristics {
            recommended_views: [],
        },
    ),
}
