crates/views/re_view_spatial/tests/integration/snapshots/integration__spawn_heuristics__one_3d_view_one_2d_view.snap
---
source: crates/views/re_view_spatial/tests/integration/spawn_heuristics.rs
expression: recommended_views
---
RecommendedViews {
    views_2d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /camera/image,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
            ],
        },
    ),
    views_3d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
            ],
        },
    ),
}
