crates/views/re_view_spatial/tests/integration/snapshots/integration__spawn_heuristics__three_2d_views_and_one_3d_excluding_images.snap
---
source: crates/views/re_view_spatial/tests/integration/spawn_heuristics.rs
expression: recommended_views
---
RecommendedViews {
    views_2d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /camera,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
                RecommendedView {
                    origin: /image1,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
                RecommendedView {
                    origin: /image2,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
            ],
        },
    ),
    views_3d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /,
                    query_filter: [
                        "+ $origin/**",
                        "- /image1/**",
                        "- /image2/**",
                    ],
                },
            ],
        },
    ),
}
